--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,21 +1,24 @@
 .navbar{
-position: sticky;
+position: fixed;
 top: 0;
+left: 0;
+width: 100%;
+
 display: flex;
 justify-content: space-between;
 align-items: center;
+
 padding: 18px 40px;
 
-/* Liquid Glass Effect */
-background: rgba(255, 255, 255, 0.1);
-backdrop-filter: blur(10px);
--webkit-backdrop-filter: blur(10px);
+background: rgba(15, 32, 39, 0.55);
 
-border-bottom: 1px solid rgba(255,255,255,0.2);
+backdrop-filter: blur(15px);
+-webkit-backdrop-filter: blur(15px);
 
-z-index: 1000;
+border-bottom: 1px solid rgba(255,255,255,0.1);
+
+z-index: 9999;
 }
-
 .logo{
 font-size:22px;
 font-weight:600;
